load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_test(
    name = "argparse_test",
    srcs = ["argparse_test.cpp"],
    deps = [
        ":common",
        "//argparse",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "argparse_global_args_test",
    srcs = ["argparse_global_args_test.cpp"],
    deps = [
        ":common",
        ":global_args",
        "//argparse",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "common",
    hdrs = ["common.h"],
    deps = ["@com_google_googletest//:gtest_main"],
)

cc_library(
    name = "global_args",
    srcs = ["global_args.cpp"],
    deps = ["//argparse"],
    alwayslink = True,
)
